<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--  General  -->
    <string name="app_name">BlindWar</string>
    <string name="blind_war">Blind War</string>

    <!-- Buttons  -->
    <string name="solo">SOLO</string>
    <string name="multi">MULTI</string>
    <string name="profile">Profile</string>
    <string name="logout">LOGOUT</string>
    <string name="Btn_email">Email</string>
    <string name="Btn_google">Google</string>
    <string name="confirm">Confirm</string>
    <string name="ok">OK</string>
    <string name="Btn_anonymous">Guest</string>

    <!--  GameUtil  -->
    <string name="logo_description">Logo of the application</string>
    <string name="format_description"> Survival : Description placeholder
    |Against the Clock :
    |Regular : Description placeholder</string>
    <string name="opt_description"> Song Selection : Description placeholder
    |Altered audio : Description placeholder</string>
    <string name="comm_description"> Dedicated fragment describing the UI elements :
    |Microphone / Pass / Timer / Settings</string>
    <string name="modes_description"> Solo Game : Description placeholder
    |Multi Game : Description placeholder</string>
    <string name="song_opt_description"> Random Song Sel : Description placeholder| Custom
    playlist </string>

    <!--  Modes  -->
    <string name="survival">SURVIVAL</string>
    <string name="classic">CLASSIC</string>
    <string name="timed">TIMED</string>
    <string name="mode_selection">MODE</string>
    <string name="funny">FUNNY</string>
    <string name="timedDescription">Faster, Higher, Stronger</string>
    <string name="survivalDescription">Good luck</string>
    <string name="classicDescription">Just a normal game</string>

    <!--  Playlist selection  -->
    <string name="playlist_selection">PLAYLIST SELECTION</string>

    <!--  Text  -->
    <string name="backText"><![CDATA[->]]></string>
    <string name="emailText">Your email here</string>
    <string name="historyText">History</string>
    <string name="logoutText">:( Logout</string>
    <string name="profilePicDescriptionText">The profile picture of the user</string>
    <string name="game">GAME</string>
    <string name="text_pseudo">Pseudo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="additional_info_text">provide more info</string>
    <string name="statisticsShowText">You have 4 wins and 8 losses</string>
    <string name="your_elo_here">Your elo here</string>
    <string name="elo">ELO:</string>

    <!-- chars for Pseudo -->
    <string name="Pseudo_AvailableChars">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890</string>

    <!-- Alert Dialogue-->
    <string name="new_user_wrong_pseudo_title">Profile Creation Alert</string>
    <string name="new_user_wrong_pseudo_text">Please, <b>enter a valid Pseudo</b>\n\nYour pseudo should be at least <b>2</b> characters, but <b>not \"Pseudo\"</b></string>

    <!-- DatePicker -->
    <string name="new_user_birthdatePicker">Please, enter your Birthdate.</string>


    <!-- Voice Recognizer -->
    <string name="recognize_file">Recognize File</string>
    <string name="tutorial">TUTORIAL</string>
    <string name="stop_microphone">Stop Microphone</string>
    <string name="content_description_background_image">Black Background Image</string>
    <string name="tutorial_textview">Tutorial</string>
    <string name="oval_description">Oval shape for profile</string>
    <string name="guess_button_text">Guess !</string>
    <string name="zero">0</string>
    <string name="modes_textview">Modes</string>
    <string name="formats_textview">Formats</string>
    <string name="commands_textview">Commands</string>
    <string name="game_options_textview">Game Options</string>
    <string name="example_elo">1435</string>
    <string name="wins">Wins:</string>
    <string name="win_number">60</string>
    <string name="win_percent" formatted="false">"25%"</string>
    <string name="draws">Draws:</string>
    <string name="draw_number">36</string>
    <string name="draw_percent" formatted="false">"15%"</string>
    <string name="losses">Losses:</string>
    <string name="loss_number">144</string>
    <string name="loss_percent" formatted="false">"60%"</string>

    <string name="correct">Correct:</string>
    <string name="correct_number">195</string>
    <string name="correct_percent" formatted="false">"65%"</string>

    <string name="wrong">Wrong:</string>
    <string name="wrong_number">105</string>
    <string name="wrong_percent" formatted="false">"35%"</string>

    <string name="selected_item">Selected item:</string>
    <string name="chose_sign_in_text">Sign In with:</string>
    <string name="signin_welcome_text">Welcome to BlindWar</string>
    <string name="avatar_description">Avatar image</string>
    <string name="artist">ARTIST</string>
    <string name="play_with_friends">Join a game via link</string>
    <string name="play_with_random">Play Now !</string>
    <string name="multi_create_match">Create a match</string>
    <string name="icon_for_playing_with_friends">Icon for playing with friends</string>
    <string name="icon_for_playing_with_random_people">Icon for playing with random people</string>
    <string name="nu_chose_profile_picture">chose profile\npicture</string>
    <string name="deletion_success">account successfully deleted, <b>Bye Bye</b></string>
    <string name="account_not_deleted_confirm_toast">ouf, you still are family member</string>
    <string name="account_deletion_confirm_title"><b>Account Deletion</b></string>
    <string name="account_deletion_confirm_text">Are you <b>really</b> sure you want to delete your account and <b>quite</b> the great game <b>BlindWar</b></string>
    <string name="account_not_deleted_toast">deletion cancelled</string>
    <string name="account_deletion_title">Account Deletion</string>
    <string name="account_deletion_text">Are you sure you want to delete your account?</string>
    <string name="select_birthdate">set birthdate</string>
    <string name="select_your_gender">Please, select your gender</string>
    <string name="cancel_btn">Cancel</string>
    <string name="alert_dialogue_cancel_title">Cancel update</string>
    <string name="alert_dialogue_cancel_text">Are you sure to keep old info</string>
    <string name="newUser_ExtraName">newUser</string>
    <string name="reset">reset</string>
    <string name="no_birthdate_selected"/>

    <!-- PROFILE -->
    <string name="userRank">Rank</string>
    <string name="userPseudo">Pseudo</string>
    <string name="userElo">Elo</string>
    <string name="likedMusics">liked musics</string>
    <string name="matchHistory">match history</string>
    <string name="leaderboard">leaderboard</string>

    <!-- MULTI -->
    <string name="toast_connexion">Match are full, retrying…</string>
    <string name="toast_canceled_connexion">Search canceled !</string>
    <string name="multi_loading">Loading …</string>
    <string name="multi_write_link">Please write your link invitation</string>
    <string name="multi_match_full">match is full, sorry !</string>
    <string name="multi_match_not_found">Match not found !</string>
    <string name="multi_wait_matches">Wait for matches…</string>
    <string name="multi_number_player">Give the maximum number of player</string>
    <string name="button_create_match">Create</string>
    <string name="multi_is_private">Do you want to create a private match ?</string>
    <string name="playlist_name">Playlist</string>
    <string name="multi_wait_players">Waiting for players…</string>
    <string name="multi_wait_players_nb">Waiting for players : %1$d/%2$d</string>
    <string name="lives">LIVES</string>
    <string name="rounds">ROUNDS</string>
    <string name="toast_connexion_internet">Connexion error, retrying…</string>
    <string name="heart_number">x %1$d</string>
    <string name="multi_bad_link">Verify the correctness of your link</string>
    <string name="toast_canceled_match_creation">Match canceled !</string>
    <string name="toast_connexion_internet_unavailable">You seems disconnected from Internet !</string>
    <string name="multi_quit_match">Quit current match</string>
    <string name="multi_join_match">Join current match</string>
    <string name="multi_dynamic_link">Click here to share a link invitation !</string>
    <string name="show_qr">Show QR code</string>
    <string name="qr_code_description">QR code to join a game</string>
    <string name="hide_qr">Hide QR</string>
    <string name="share_title">Share invitation</string>
    <string name="share_text">Share BlindWar invitation !</string>
    <string name="share_subject">Invitation link !</string>
    <string name="button_to_expand_playlist">Button to expand playlist</string>
    <string name="button_to_play_preview_of_playlist">Button to play preview of playlist</string>
    <string name="the_author_of_this_playlist">The author of this playlist</string>
    <string name="hard">HARD</string>
    <string name="pop">POP</string>
    <string name="button_to_start_game">Button to start game</string>
    <string name="timer">TIMER</string>
    <string name="multi_already_started">Match has already started, disconnexion…</string>
    <string name="NU_describe_yourself">describe yourself</string>
    <string name="birthdate_set_to">birthdate set to</string>
    <string name="_1000">1000</string>
    <string name="name">NAME</string>
    <string name="statistics">Statistics</string>
    <string name="history">History</string>
    <string name="favorites">Favorites</string>
    <string name="pen_image">PenImage</string>
    <string name="login_image">login image</string>
    <string name="delete_profile_image">delete profile image</string>
    <string name="content_description_ImageButton">Image button</string>
    <string name="content_description_Image">Image</string>
    <string name="x_1">x 1</string>
    <string name="track">TRACK</string>
    <string name="time">TIME</string>
    <string name="main_menu_music_name">Crabe Rave - Noisestorm</string>
    <string name="play">Play</string>
    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="this_is_an_artist">This is an artist</string>
    <string name="_0">0</string>
    <string name="delete">Delete</string>
    <string name="unknown">UNKNOWN</string>
    <string name="final_score">Final score</string>
    <string name="leave">Leave</string>
    <string name="Search">Search</string>
    <string name="percent">%1$s %%</string>
    <string name="not_logged_in_msg">please, activate internet and connect to your account in order to use offline mode.</string>
    <string name="not_logged_in_title">Offline mode require to be logged in</string>
</resources>
