...
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/NU_FirstName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/NU_FirstName"
                android:background="@android:color/transparent"
                android:text="@string/delete_profile"
                android:onClick="deleteProfile"
                android:textColor="@color/light_red" />

            <EditText
                android:id="@+id/NU_LastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                android:layout_marginBottom="@dimen/NU_between_field_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/NU_Confirm_Btn"
                app:layout_constraintTop_toBottomOf="@+id/NU_description"
                app:layout_constraintBottom_toBottomOf="@+id/NU_BOTTOM_guideline"
                android:background="@android:color/transparent"
                android:onClick="cancel"
                android:text="@android:string/cancel"
                android:textColor="@color/light_red"/>

            <Button
                android:id="@+id/NU_Confirm_Btn"
                android:layout_width="wrap_content"
...
